--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -41,17 +41,9 @@
   float: left;
   box-sizing: border-box; }
 
-/* For devices larger than 400px */
-@media (min-width: 400px) {
-  .container {
-    width: 85%;
-    padding: 0; }
-}
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
-  .container {
-    width: 80%; }
   .column,
   .columns {
     margin-left: 4%; }
